# OCam

./: .gitignore  README.md  ocam_adb_gui.py  run.bat  run.sh
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/com/example/ocam/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/ocam/: AudioStreamer.kt  CameraStreamer.kt  ControlServer.kt  MainActivity.kt
android/app/src/main/java/com/example/ocam/ui/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/test/java/com/example/ocam/: ExampleUnitTest.kt
android/gradle/wrapper/: gradle-wrapper.properties
obs-plugin/: CMakeLists.txt  CMakePresets.json  buildspec.json
obs-plugin/cmake/common/: buildspec_common.cmake
obs-plugin/cmake/macos/resources/: distribution.in
obs-plugin/cmake/windows/: defaults.cmake
obs-plugin/src/: obs-ocam-source.c
